--- a/app/views/lps.ejs
+++ b/app/views/lps.ejs
@@ -69,13 +69,10 @@
                 <h1 class="page-header">Thumbnail Gallery</h1>
             </div>
 
-				<span> <%corals[1].light%> </span>
-				<%= corals%>
 			<% for( coral in corals) {%>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-				<%= coral%>
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+				<a class="thumbnail" href="<%= corals[coral].productCode%>">
+					<img class="img-responsive" src="/<%= corals[coral].thumbnailImg%>" alt="">
 				</a>
 				
 				<span> <%= corals[coral].light%> </span>
