--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,81 +5,142 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		<style>
-		.carousel-inner > .item > img,
-		.carousel-inner > .item > a > img {
-			width: 1140px;
-			height: 445px;
-			margin: auto;
-		}
-		</style>	  
+		<link rel='stylesheet' type='text/css' href='css/custom.css'>
+		<script src='js/jquery.min.js'></script>
+		<script src="js/bootstrap.min.js"></script>
 	</head>
 	<body>
-		<div class='container-fluid'>
-			<nav class="navbar navbar-default">
-			  <div class="container-fluid">
-				<div class="navbar-header">
-				  <a class="navbar-brand" href="#">WebSiteName</a>
-				</div>
-				<div>
+		<div class='container'>
+			<div class='row'>
+				<img src='img/logo.png' id='logo' class='col-md-offset-1'>
+			</div>
+			<nav class="navbar navbar-default center">
+				<div class='navbar-inner'>
 				  <ul class="nav navbar-nav">
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="/corals">Corals</a></li>
-					<li><a href="#">Fish</a></li> 
-					<li><a href="#">iMarine Algae</a></li> 
-					<li><a href="#">Dry Goods</a></li> 
-					<li><a href="#">Healthy Tank Kits</a></li> 
+					<li>
+						<a href='/corals'>Corals</a>
+						<ul class="dropdown-menu" > <!--type="button" data-toggle="dropdown"-->
+							<li><a href="/corals/lps">LPS</a></li>
+							<li><a href="#">SPS</a></li>
+							<li><a href="#">Soft Corals</a></li>
+						</ul>	  
+					</li>
+					<li>
+						<a href='/'>Fish</a>
+						<ul class="dropdown-menu multi-level" role='menu' > <!--type="button" data-toggle="dropdown"-->
+							<li class='dropdown-submenu'>
+								<a href="/corals/lps">By Region</a>
+																	
+								<ul class="dropdown-menu" > <!--type="button" data-toggle="dropdown"-->
+									<li><a href="/corals/lps">Central Pacific</a></li>
+									<li><a href="#">SPS</a></li>
+									<li><a href="#">Soft Corals</a></li>
+								</ul>	  
+							</li>
+							<li><a href="#">SPS</a></li>
+							<li><a href="#">Soft Corals</a></li>
+						</ul>	  
+					</li>
+					<li>
+						<a href='/corals'>Marine Algae</a>
+						<ul class="dropdown-menu" > <!--type="button" data-toggle="dropdown"-->
+							<li><a href="/corals/lps">LPS</a></li>
+							<li><a href="#">SPS</a></li>
+							<li><a href="#">Soft Corals</a></li>
+						</ul>	  
+					</li>
+					<li>
+						<a href='/corals'>Dry Goods</a>
+						<ul class="dropdown-menu" > <!--type="button" data-toggle="dropdown"-->
+							<li><a href="/corals/lps">LPS</a></li>
+							<li><a href="#">SPS</a></li>
+							<li><a href="#">Soft Corals</a></li>
+						</ul>	  
+					</li>
+					<li>
+						<a href='/corals'>Healthy Tank Kits</a>
+						<ul class="dropdown-menu" > <!--type="button" data-toggle="dropdown"-->
+							<li><a href="/corals/lps">LPS</a></li>
+							<li><a href="#">SPS</a></li>
+							<li><a href="#">Soft Corals</a></li>
+						</ul>	  
+					</li>
 				  </ul>
 				</div>
-			  </div>
 			</nav>	
-		</div>
-		<div class="container-fluid">
-			<br>
-		  	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-				<!-- Indicators -->
-				<ol class="carousel-indicators">
-					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-					<li data-target="#myCarousel" data-slide-to="1"></li>
-					<li data-target="#myCarousel" data-slide-to="2"></li>
-					<li data-target="#myCarousel" data-slide-to="3"></li>
+			<div id='slider' class='carousel slide' data-ride='carousel'>
+				<ol class='carousel-indicators'>
+					<li data-target='#slider' data-slide-to='0' class='active'></li>
+					<li data-target='#slider' data-slide-to='1'></li>
+					<li data-target='#slider' data-slide-to='2'></li>
 				</ol>
-
-				<!-- Wrapper for slides -->
-				<div class="carousel-inner" role="listbox">
-					<div class="item active">
-						<img src="img/a.jpg" alt="Chania" width="460" height="345">
-					</div>
-
-					<div class="item">
-						<img src="img/b.jpg" alt="Chania" width="460" height="345">
-					</div>
-
-					<div class="item">
-						<img src="img/c.jpg" alt="Flower" width="460" height="345">
-					</div>
-
-				</div>
-
-				<!-- Left and right controls -->
-				<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
+				
+				<div class='carousel-inner'>
+					<div class='item active'>
+						<img src="img/a.jpg" alt="Chania" class='img-responsive'>
+					</div> <!-- item 1 -->
+					<div class='item'>
+						<img src="img/b.jpg" alt="Chania" class='img-responsive'>
+					</div> <!-- iteml 2 -->
+					<div class='item'>
+						<img src="img/c.jpg" alt="Chania" class='img-responsive'>
+					</div> <!-- item 3 -->
+				</div> <!-- carousel-inner -->
+				<a class='left carousel-control' href='#slider' role='button' data-slide='prev'>
+					<span class='glyphicon glyphicon-chevron-left'></span>
 				</a>
-				<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
+				<a class='right carousel-control' href='#slider' role='button' data-slide='next'>
+					<span class='glyphicon glyphicon-chevron-right'></span>
 				</a>
+				<!-- controls-->
+			</div><!--the slider-->
+			<div id='promos' class='row'>
+				<img src="img/CoralFishFreeShipping.jpg" class='col-md-offset-1 col-md-5'>
+				<img src="img/15-Day-Guarantee.jpg" class='col-md-5'>
 			</div>
-		</div>	
-		<div class='container'>
-			<img src="img/CoralFishFreeShipping.jpg">
-			<img src="img/15-Day-Guarantee.jpg">
+			<footer class='row'>
+				<div id='company' class='col-md-2 col-md-offset-1'>
+					<p>Company</p>
+					<a href=''>Privacy Policy</a>
+					<a href=''>Terms & Conditions</a>
+					<a href=''>Product List</a>
+					<a href=''>Category List</a>
+				</div>
+				<div id='customers' class='col-md-2'>
+					<p>Customers</p>
+					<a href=''>FAQ/Help</a>
+					<a href=''>15 Day Guarantee</a>
+					<a href=''>Returns & Shopping</a>
+				</div>
+				<div id='account' class='col-md-2'>
+					<p>Account</p>
+					<a href=''>My Account</a>
+					<a href=''>Login / Register</a>
+					<a href=''>Order Status</a>
+				</div>
+				<div id='connect' class='col-md-2'>
+					<p>Connect</p>
+					<a href='https://www.facebook.com/fishdoctor.us'>
+						<span class='glyphicon glyphicon-thumbs-up'></span>
+						<span>Facebook</span>
+					</a>
+					<a href='mailto:mike@fishdoctor.us '>
+						<span class='glyphicon glyphicon-envelope'></span>
+						<span>Contact Us</span>
+					</a>
+				</div>
+				<div id='mailingList' class='col-md-3'>
+					<p>Join Mailing List</p>
+					<form class="form-inline" action='mailingList' method='post'>
+						<div class="form-group">
+							<label class="sr-only" for="exampleInputEmail3">Email address</label>
+							<input type="email" class="form-control" id="email" name='email' placeholder="Email">
+						</div>
+					<button type="submit" class="btn btn-default">Sign in</button>
+					</form>	
+				</div>
+			</footer> 
 		</div>
 	</body>
-	<script src='js/jquery.min.js'></script>
-	<script src='js/bootstrap.min.js'></script>
 	
 </html>
