--- a/app/views/corals.ejs
+++ b/app/views/corals.ejs
@@ -11,9 +11,9 @@
 	<a href='/corals/hardCoral'>Hard Coral</a>	
 	</div>	
 	
-	<img src='img/corals/b.jpg'>
-	<img src='img/corals/a.jpg'>
-	<img src='img/corals/c.jpg'>
+	<img src='/img/corals/b.jpg'>
+	<img src='/img/corals/a.jpg'>
+	<img src='/img/corals/c.jpg'>
 </body>
 	
 </html>
