--- a/app/views/lps.ejs
+++ b/app/views/lps.ejs
@@ -13,7 +13,9 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+	<script src='/js/jquery.min.js'></script>
 	<script src='/js/bootstrap.min.js'></script>
+	
 	
     <!-- Custom CSS -->
     <link href="/css/custom.css" rel="stylesheet">
@@ -95,7 +97,7 @@
 				<div class='col-sm-3 col-xs-6'>
 					<div class='product thumbnail'>
 						<a href='/corals/lps/<%= corals[i].productCode %>' >
-							<img class='img-responsive' src=<%= corals[i].thumbnailImg %> >
+							<img class='img-responsive' src=<%= corals[i].thumbnailImg %>>
 						</a>
 						<h3><%= corals[i].commonName %></h3>
 					</div>
