adding admin portal

--- a/app/views/corals.ejs
+++ b/app/views/corals.ejs
@@ -8,7 +8,7 @@
 	<p>Choose a Sub Category</p>
 	<a href='/corals/lps'>LPS</a>	
 	<a href='/corals/sps'>SPS</a>	
-	<a href='/corals/hardCoral'>Hard Coral</a>	
+	<a href='/corals/soft'>Soft Coral</a>	
 	</div>	
 	
 	<img src='/img/corals/b.jpg'>
